# tinjis

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-push-image.yml  test_payment.yaml
kubernetes/: README.md  kustomization.yaml
kubernetes/antaeus/: deployment.yaml  service.yaml
kubernetes/payment/: deployment.yaml  service.yaml
payment/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
payment/src/payment/: main.py
payment/src/payment/routers/v1/: __init__.py  health.py  payments.py
payment/tests/: test_main.py
